--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,18 +33,16 @@ dependencies {
     compile "com.android.support:design:$rootProject.supportLibraryVersion"
     compile "com.android.support:support-v4:$rootProject.supportLibraryVersion"
     compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
+    compile "jp.wasabeef:glide-transformations:$rootProject.glideTransformationVersion"
     compile "jp.wasabeef:recyclerview-animators:$rootProject.recyclerviewAnimatorsVersion"
-
     compile "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
     apt "com.jakewharton:butterknife-compiler:$rootProject.butterknifeVersion"
-
     compile "com.github.bumptech.glide:glide:$rootProject.glideVersion"
-
     compile "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
     compile "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
-
     androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.espressoCoreVersion", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile "junit:junit:$rootProject.jUnitVersion"
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
