--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,15 @@
             android:theme="@style/AppThemNoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".activities.DetailsActivity"
+            android:theme="@style/AppThemNoActionBar" />
+        <activity
+            android:name=".activities.VideoActivity"
             android:theme="@style/AppThemNoActionBar" />
     </application>
 
